# mockapi_cli

./: LICENSE  README.md  pyproject.toml
docs/: index.md  installation.md  quick_start.md
docs/usage/: cli.md  configuration_mock.md  configuration_settings.md  examples_mocks.md
mockapi/: __main__.py
mockapi/core/config/: config.py
mockapi/core/django_service/view/: constants.py  form_parser.py  http_helpers.py  validator.py
mockapi/core/io/: constants.py  io.py
mockapi/data/: settings.json
mockapi/data.example/: mocks.json
mockapi/django_service/django_service/: asgi.py  dynamic_view.py  settings.py  urls.py
mockapi/mockapi/: main.py  messages.py  settings.py
