[project]
name = "mockapi"
version = "0.0.2"
description = "MockAPI CLI — a local tool for creating mock endpoints in Django"
authors = [
    { name = "Ugoke" }
]
license = "MIT"
readme = "README.md"
keywords = ["mock", "cli", "django", "frontend", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "django>=5.2.7",
    "faker>=37.8.0"
]

[project.scripts]
mockapi = "mockapi.__main__:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
mockapi = ["data/*.json", "data.example/*.json"]